--- a/.env
+++ b/.env
@@ -17,3 +17,11 @@
 APP_ENV=dev
 APP_SECRET=28c856561bdfb12eb3d0782b3e265ba4
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL=mysql://root:@127.0.0.1:3306/ardas-test?serverVersion=5.7
+###< doctrine/doctrine-bundle ###
